finished redesigning the activitys, tried transfering everything to the fragments for smoother clicks but it got so buggy I rage-quit that idea and dont know if I will continue with it even tho it is important to have it. Even after few fragments working as intended other ones were so buggy even after having the same line of code... gave up on that idea for now

--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg"
-    tools:context=".UserActivitys.AdminActivitys.AdminActivity">
+    tools:context=".UserActivitys.AdminActivitys.AdminActivity"
+    android:id="@+id/AdminActivity">
 
     <LinearLayout
         android:id="@+id/toolbar"
