--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -241,6 +241,7 @@
                             app:tint="@color/text3" />
 
                         <TextView
+                            android:id="@+id/emailAddress"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
