--- a/app/src/main/res/layout/activity_check_attendance.xml
+++ b/app/src/main/res/layout/activity_check_attendance.xml
@@ -156,7 +156,24 @@
         android:layout_marginRight="123dp"
         android:layout_marginLeft="125dp" />
 
+    <Button
+        android:id="@+id/attendanceListButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="124dp"
+        android:layout_marginLeft="171dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginRight="152dp"
+        android:background="@drawable/button"
+        android:text="Check the List"
 
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.561"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/attendanceCounter"
+        app:layout_constraintVertical_bias="0.065" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
